--- a/src/assets/style/Footer.module.css
+++ b/src/assets/style/Footer.module.css
@@ -28,3 +28,7 @@ h1 {
   margin-right: 95px;
   margin-left: 95px;
 }
+
+main {
+  min-height: 100vh;
+}
